@@ -1,3 +1,5 @@
+:title: README
+
 = flare-tools
 
 Flare-tools is a collection of command line tools to maintain a flare cluster.
