@@ -1,3 +1,5 @@
+:title:Tutorial
+
 = Tutorial
 
 * under construction
