@@ -1,3 +1,4 @@
+:title: History of flare-tools
 
 === 0.2.2 / 2011-11-24
 * Minor Enhancements
